# fifo-named-pipe

./: Cargo.toml  README.md
.github/workflows/: codecov.yml  rust.yml  scheduled-audit.yml
src/: main.rs  pipe.rs
