[package]
name = "fifo-named-pipe"
version = "0.1.0"
edition = "2021"
publish = false     #  prevent a package from being published to a package registry by mistake, to keep a package private in a company
authors = ["Amidamaru <ardtimeit@gmail.com>"]
description = "Litheum Named Pipe"
license = "MIT/Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nix = "0.27"
tokio = { version= "1.18", features = ["full"] }